--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "rich>=14.0.0,<15.0.0",
     "tiktoken>=0.9.0,<0.10.0",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
-    "trafilatura (>=2.0.0,<3.0.0)"
+    "trafilatura (>=2.0.0,<3.0.0)",
+    "aiohttp (>=3.9,<4.0)"
 ]
 
 [build-system]
